# mavlink_communicator

./: CMakeLists.txt  Dockerfile  README.md  install_requirements.sh  package.xml
.github/workflows/: catkin_build.yml
docker/: Dockerfile  docker.sh
include/: mavlink_communicator.h  mavlink_communicator_ros.h
launch/: mavlink_communicator.launch
src/: mavlink_communicator.cpp  mavlink_communicator_ros.cpp
